edit Registration Test
